--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -422,7 +422,7 @@ p[data-f-id="pbf"] {
         margin: 1.9rem 0;
         border-radius: 5px;
         padding: 2.5rem;
-        box-shadow: 0 3px 3px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+        // box-shadow: 0 3px 3px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
     }
 }
 .btns-container {
