--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -443,7 +443,7 @@ p[data-f-id="pbf"] {
         height: 50px;
         text-align: center;
         border-radius: 2px;
-        box-shadow: 0 3px 3px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+        // box-shadow: 0 3px 3px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
         &:hover {
             background-color: rgb(250, 250, 250);
         }
