--- a/frontend/src/_responsive.scss
+++ b/frontend/src/_responsive.scss
@@ -6,6 +6,15 @@
         }
     }
 }
+@media only screen and (max-width: 1220px) {
+    .Article {
+        .together {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+    }
+}
 @media only screen and (max-width: 1024px) {
     .home {
         .container {
@@ -15,10 +24,34 @@
     }
     .Navbar {
         padding: 1.5rem 0rem;
-        input {
+        input#inp {
             padding-right: 0;
             margin-right: 0;
             width: 220px;
+        }
+    }
+    .Article {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .container {
+            width: 90vw;
+        }
+        gap: 2rem;
+        .btns-container{
+            display: none;
+        }
+        .together {
+            left: 0;
+            flex-direction: row;
+            justify-content: center;
+            position: relative;
+            gap: 0;
+            p {
+                position: relative;
+                top: 13px;
+            }
         }
     }
 }
@@ -29,13 +62,32 @@
             grid-template-columns: repeat(1, 1fr);
         }
     }
+   
 }
 
 @media only screen and (max-width: 480px) {
+    .Navbar {
+        img {
+            width: 230px !important;
+            margin-bottom: 1rem;
+        }
+    }
     .home {
         .container {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
         }
     }
+    .Article {
+        .container {
+            width: 100vw;
+            padding: 2rem;
+        }
+    }
+    
+}
+
+.nav-mobile {
+    display: flex;
+    flex-direction: column;
 }
