--- a/frontend/src/_responsive.scss
+++ b/frontend/src/_responsive.scss
@@ -71,6 +71,10 @@
             width: 230px !important;
             margin-bottom: 1rem;
         }
+        .dropdown {
+            position: absolute;
+            top: 11rem !important;
+        }
     }
     .home {
         .container {
