--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -469,6 +469,8 @@ p[data-f-id="pbf"] {
         -webkit-box-shadow: 0 0 30px #333;
         box-shadow: 0 0 30px #333;
         margin-left: 3.5rem;
+        
+        border: 3px solid #333;
     }
     .item {
         background-color: white;
@@ -478,7 +480,7 @@ p[data-f-id="pbf"] {
         padding: 7.5px 1.33rem;
         font-size: 1.5rem;
         display: none;
-        font-family: cursive;
+        font-family: 'Pushster', cursive;
         border-bottom: 1px solid rgb(207, 207, 207);
         &:hover {
             background-color: #f4efff;
