--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 $main-color: rgb(31, 31, 31);
-$secondery-color: rgb(30,153,97);
+$secondery-color: rgb(23, 119, 76);
 
 body, html {
     overflow-x: hidden;
